--- a/task8/2.html
+++ b/task8/2.html
@@ -33,11 +33,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-5  hidden-xs padding-left">
-                    <img class="log" src="img/home-logo-hs.png">
+                    <a href="1.html"><img class="log" src="img/home-logo-hs.png"></a>
                 </div>
                 <div class="col-md-6 col-md-push-3 col-sm-7 hidden-xs padding-right">
                     <ul class="list-none">
-                        <li class="list1 list-none">职业殿堂</li>
+                        <a href="3.html"><li class="list1 list-none">职业殿堂</li></a>
                         <li class="list1 list-none">线上学习</li>
                         <li class="list1 list-none">我的学院</li>
                         <li class="list1 list-none">学习资料</li>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="log-box visible-xs">
-                <img class="log" src="img/home-logo-hs.png">
+                <a href="1.html"><img class="log" src="img/home-logo-hs.png"></a>
 
             </div>
             <div class="down-list visible-xs">
@@ -57,7 +57,7 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
             <ul class="visible-xs list-none">
-                <li class="list2 list-none">职业殿堂</li>
+                <a href="3.html"><li class="list1 list-none">职业殿堂</li></a>
                 <li class="list2 list-none">线上学习</li>
                 <li class="list2 list-none">我的学院</li>
                 <li class="list2 list-none">学习资料</li>
@@ -144,7 +144,7 @@
                         <br/>
                         <span class="underline1">关于我们</span>
                         <span class="font-style2 underline1">了解我们</span>
-                        <span class="underline1">合作企业</span>
+                        <span class="underline1"><a class="a" href="2.html">合作企业</a></span>
                     </div>
                     <div class="col-sm-5">
                         <span class="font-style3">旗下网站</span>
