--- a/task12/1.html
+++ b/task12/1.html
@@ -21,5 +21,31 @@
     <div class="kind">
         <span>专业技能</span>
     </div>
+     <ul>
+         <li class="first">
+             <span><img src="../task5/img/star.png">住家</span>
+             <span><img src="../task5/img/star.png">不含餐</span>
+         </li>
+         <li>
+             <span class="one">从业年限</span>
+             <span>0~3年</span>
+         </li>
+         <li>
+             <span class="one">工作时间</span>
+             <span>全天</span>
+         </li>
+         <li>
+             <span class="one">服务价格</span>
+             <span class="two">25元一小时</span>
+         </li>
+
+     </ul>
+     <div class="bottom">
+            <span>自我介绍</span><span> 可以洗衣、做饭、照顾老人。在护   工方面有5年的经验，经验丰富。</span>
+     </div>
+     <footer>
+         <span>留言</span>
+         <span>电话联系</span>
+     </footer>
 </body>
 </html>
