--- a/task13/1.html
+++ b/task13/1.html
@@ -10,13 +10,22 @@
 </head>
 
 <body>
+    <div class="menu">
+            <input type="checkbox" id="menu">
+        <ul>
+            <li>公告</li>
+            <li>更新</li>
+            <li>帮助</li>
+            <li>关于</li>
+        </ul>
+    <div class="main">
     <header>
-        <img src="img/form.png">
+        <label for="menu"><img src="img/form.png"></label>
     </header>
     <span class="title">
         上次游戏:捉鬼猜词版
     </span>
-    <div>
+    <div class="box">
        
         <span>捉鬼游戏 </span>
         <span>简化版</span>
@@ -32,7 +41,8 @@
             <li></li>
         </ul>
     </div>
-
+</div>
+</div>
 
 </body>
 
