--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <a href="task8/3.html">任务八九3</a>
     <a href="task10/1.html">任务10</a>
     <a href="task11/1.html">任务11</a>
+    <a href="task12/1.html">任务12</a>
+    <a href="task12/2.html">任务12-1</a>
+    <a href="task13/1.html">任务13-1</a>
+    <a href="task13/2.html">任务13-2</a>
+    <a href="task13/3.html">任务13-3</a>
+   
 </body>
 
 </html>
