--- a/task12/2.html
+++ b/task12/2.html
@@ -45,56 +45,69 @@
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
         <li>
             <span>服务日期</span>
             <p>
-                <span>2015-7-5 至 2015-7-12</span>
                 <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
             </p>
             <span>北京.通州.果园</span>
         </li>
+        <li>
+            <span>服务日期</span>
+            <p>
+                <span class="right">25元/1小时</span>
+                <span>2015-7-5 至 2015-7-12</span>
+            </p>
+            <span>北京.通州.果园</span>
+        </li>
+
     </ul>
     <footer>
-        <span><img src="img/house.png"><br/>首页</span>
+        <span>
+            <img src="img/house.png">
+            <br/>首页</span>
         <img src="img/Write.png">
-        <span><img src="img/locus.png"><br/>我的</span>
+        <span>
+            <img src="img/locus.png">
+            <br/>我的</span>
     </footer>
 </body>
 
