--- a/task1415/2.html
+++ b/task1415/2.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="less&css/2.css">
 </head>
+
 <body>
+    <div class="container">
+        <div class="row">
+            <header>
+                <span class="hidden-xs">客服热线：1234-123-12</span>
+                <div>
+                    <div class="qq"></div>
+                    <div class="sine"></div>
+                    <div class="n"></div>
+                    <span>登陆</span>
+                    <!-- 
+            -->
+                    <span>注册</span>
+                </div>
+            </header>
+        </div>
+
+    </div>
+    <div class="down-menu">
+        <div class="container">
+            <div class="row">
+
+                <img alt="Brand" src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/home-logo-hs.png">
+                <input type="checkbox" id="menu">
+                <label class="visible-xs" for="menu">
+                    <img src="img/menu.png">
+                </label>
+                <ul>
+                    <li>职业殿堂</li>
+                    <li>线上学习</li>
+                    <li>我的学院</li>
+                    <li>学习资料</li>
+                    <li>线下实战</li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div>
+                    <span>技能树一改变你我</span>
+                    <p>
+                        <span>关于我们</span>&emsp;
+                        <span>了解我们</span>&emsp;
+                        <span>合作企业</span>
+                    </p>
+                </div>
+                <div>
+                    <span>旗下网站</span>
+                    <p>
+                        <span>葡萄藤轻游戏</span>&emsp;
+                        <span>葡萄藤轻游戏</span>
+                    </p>
+                    <p>
+                        <span>葡萄藤轻游戏</span>&emsp;
+                        <span>左右精灵</span>
+                    </p>
+                </div>
+                <div>
+                    <span>微信公众二维码</span>
+                    <img src="img/qrcode_for_gh_32213eeb65ba_1280.png" >
+                </div>
+            </div>
+        </div>
+    </footer>
+    <p class="site"> <span>copyrght @ 2015技能书</span> www.jnshu.com ALL rights reserved <span>丨京ICP 1321564987号</span> </p>
+
+
 </body>
+
 </html>
