--- a/task1415/2.html
+++ b/task1415/2.html
@@ -48,32 +48,70 @@
         </div>
     </div>
 
+    <img src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/banner2.png" class="img-responsive">
+    <div class="container">
+        <div class="row">
+            <span>首页&gt;</span>
+            <span class="kind">合作企业</span>
+        </div>
+        <div class="row  data">
+            <div>
+                <ul>
+                    <li>合作企业</li>
+                    <li>
+                        <span>阿里巴巴</span>
+                    </li>
+                    <li>
+                        <span>阿里巴</span>
+                    </li>
+                    <li>
+                        <span>阿里巴巴</span>
+                    </li>
+                    <li>
+                        <span>阿里巴巴的</span>
+                    </li>
+                    <li>
+                        <span>阿里巴巴</span>
+                    </li>
+                    <li>
+                        <span>阿里巴</span>
+                    </li>
+                    <li>
+                        <span>阿里巴巴的</span>
+                    </li>
+                    <li>
+                        <span>阿里巴巴</span>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div class="box">
+                <p>
+                    <img src="img/log111.png" alt="">
+                    <span>土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商之一，成立 土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商土成立于1998年11月立于1998土豆网公司成立于1998年11月，成立于1998土豆网公司成立于1998年11月
+                        是目前中国最大的互联网综合服务提供商之一，</span>
+                </p>
+                <p>&emsp;&emsp;土豆是中国最早和最具影响力的网络视频平台，是中国网络视频行业的领军品牌。其前身土豆网于2005年4月15日 土豆是中国最早和最具影响力的网络视频平台，是中国网络视频行业的领军品牌。其前身土豆网于2005年4月15日地方地方地方</p>
+                <p>&emsp;&emsp;“每个人都是生活的导演”是土豆从创立第一天始的价值观。土豆相信年轻人的想象力、创造力，相信土豆的平台能 帮助年轻 “每个人都是生活的导演”是土豆从创立第一天始的价值观。土豆相信年轻人的想象力、创造力，相信土豆的平台能
+                    帮助年轻 “每个人都是生活的导演”是土豆从创立第一天始的价值观。土豆相信年轻人的想象力、创造力，相信土豆的平台能 帮助年轻</p>
+                <p>&emsp;&emsp;2012年3月12日，优酷股份有限公司(NYSE: YOKU) (“优酷”) 和土豆股份有限公司 (NA 2012年3月12日，优酷股份有限公司(NYSE: YOKU) (“优酷”) 和土豆股份有限公司
+                    (NA 2012年3月12日，优酷股份有限公司(NYSE: YOKU) (“优酷”) 和土豆股份有限公司 (NA</p>
+                <p>&emsp;&emsp;2013年2月，杨伟东成为土豆总裁，宣布打造土豆“成为中国年轻人最喜爱的视频网站”，并明确土豆“成为中国 2013年2月，杨伟东成为土豆总裁，宣布打造土豆“成为中国年轻人最喜爱的视频网站”，并明确土豆“成为中国
+                    2013年2月，杨伟东成为土豆总裁，宣布打造土豆“成为中国年轻人最喜爱的视频网站”，并明确土豆“成为中国</p>
+                <p>&emsp;&emsp;2014年3月土豆推出“4+1”战略。其中“4”代表的是土豆在内容方面更专注动漫、音乐、韩国娱乐、时尚四 2014年3月土豆推出“4+1”战略。其中“4”代表的是土豆在内容方面更专注动漫、音乐、韩国娱乐、时尚四
+                    2014年3月土豆推出“4+1”战略。其中“4”代表的是土豆在内容方面更专注动漫、音乐、韩国娱乐、时尚四</p>
+                <p>&emsp;&emsp;根据第三方调研公司艾瑞的数据，优酷土豆集团在PC端和移动端全平台各项数据持续占据视频行业绝对领先优势， 根据第三方调研公司艾瑞的数据，优酷土豆集团在PC端和移动端全平台各项数据持续占据视频行业绝对领先优势，
+                    根据第三方调研公司艾瑞的数据，优酷土豆集团在PC端和移动端全平台各项数据持续占据视频行业绝对领先优势，</p>
+            </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
 
     <footer>
         <div class="container">
@@ -99,12 +137,15 @@
                 </div>
                 <div>
                     <span>微信公众二维码</span>
-                    <img src="img/qrcode_for_gh_32213eeb65ba_1280.png" >
+                    <img src="img/qrcode_for_gh_32213eeb65ba_1280.png">
                 </div>
             </div>
         </div>
     </footer>
-    <p class="site"> <span>copyrght @ 2015技能书</span> www.jnshu.com ALL rights reserved <span>丨京ICP 1321564987号</span> </p>
+    <p class="site">
+        <span>copyrght @ 2015技能书</span> www.jnshu.com ALL rights reserved
+        <span>丨京ICP 1321564987号</span>
+    </p>
 
 
 </body>
