--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <a href="task13/1.html">任务13-1</a>
     <a href="task13/2.html">任务13-2</a>
     <a href="task13/3.html">任务13-3</a>
+    <a href="task1415/1.html">14-1</a>
+    <a href="task1415/2.html">14-2</a>
+    <a href="task1415/3.html">14-3</a>
    
 </body>
 
