--- a/task1415/3.html
+++ b/task1415/3.html
@@ -31,17 +31,17 @@
         <div class="container">
             <div class="row">
 
-                <img alt="Brand" src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/home-logo-hs.png">
+                <a href="1.html"><img alt="Brand" src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/home-logo-hs.png"></a>
                 <input type="checkbox" id="menu">
                 <label class="visible-xs" for="menu">
                     <img src="img/menu.png">
                 </label>
                 <ul>
-                    <li>职业殿堂</li>
-                    <li>线上学习</li>
+                    <a href="3.html"><li>职业殿堂</li></a>
+                    <a href="2.html"><li>线上学习</li></a>
                     <li>我的学院</li>
                     <li>学习资料</li>
-                    <li>线下实战</li>
+                    <li class="last-li">线下实战</li>
                 </ul>
 
             </div>
@@ -55,15 +55,16 @@
         </div>
         <div class="row">
             <p class="list">
-                <span>方向：</span>
+                <span class="first-span">方向：</span>
                 <span>全部</span>
-                <span>前端开发</span>
-                <span>后端开发</span>
-                <span>整体开发</span>
-                <span>移动开发</span>
+                <a href="#miao1"><span>前端开发</span></a>
+                <a href="#miao2"><span>后端开发</span></a>
+                <a href="#miao3"><span>整体开发</span></a>
+                <a href="#miao4"><span>移动开发</span></a>
             </p>
         </div>
         <div class="row">
+            <a name="miao1"></a>
             <h4>前端开发</h4>
         </div>
         <div class="row flex-md-3-2-1">
@@ -304,6 +305,7 @@
             </div>
         </div>
         <div class="row">
+                <a name="miao2"></a>
             <h4>后端工程师</h4>
         </div>
 
@@ -701,6 +703,7 @@
             </div>
         </div>
         <div class="row">
+                <a name="miao3"></a>
             <h4>整体开发</h4>
         </div>
         <div class="row flex-md-3-2-1">
@@ -941,6 +944,7 @@
             </div>
         </div>
         <div class="row">
+                <a name="miao4"></a>
             <h4>移动开发</h4>
         </div>
         <div class="row flex-md-3-2-1">
@@ -1087,7 +1091,7 @@
     </footer>
     <p class="site">
         <span>copyrght @ 2015技能书</span> www.jnshu.com ALL rights reserved
-        <span>丨京ICP 1321564987号</span>
+        <span>丨京ICP1321564987号</span>
     </p>
 
 
