--- a/task1415/1.html
+++ b/task1415/1.html
@@ -31,17 +31,17 @@
         <div class="container">
             <div class="row">
 
-                <img alt="Brand" src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/home-logo-hs.png">
+                <a href="1.html"><img alt="Brand" src="http://jns.img.bucket.ks3-cn-beijing.ksyun.com/skill/skill_html/images/home-logo-hs.png"></a>
                 <input type="checkbox" id="menu">
                 <label class="visible-xs" for="menu">
                     <img src="img/menu.png">
                 </label>
                 <ul>
-                    <li>职业殿堂</li>
-                    <li>线上学习</li>
+                    <a href="3.html"><li>职业殿堂</li></a>
+                    <a href="2.html"><li>线上学习</li></a>
                     <li>我的学院</li>
                     <li>学习资料</li>
-                    <li>线下实战</li>
+                    <li class="last-li">线下实战</li>
                 </ul>
 
             </div>
@@ -297,7 +297,7 @@
     </footer>
     <p class="site">
         <span>copyrght @ 2015技能书</span> www.jnshu.com ALL rights reserved
-        <span>丨京ICP 1321564987号</span>
+        <span>丨京ICP1321564987号</span>
     </p>
 
 
