--- a/jstask1/9box.html
+++ b/jstask1/9box.html
@@ -29,6 +29,7 @@
             border: none;
             border-radius: .3rem;
         }
+        
     </style>
 </head>
 
@@ -58,8 +59,7 @@
             if (arr[0] != arr[1] && arr[0] != arr[2] && arr[1] != arr[2]) {
                 return arr;
             } else {
-                
-                number()
+                number();
             }
 
         }
@@ -84,7 +84,7 @@
         //选区全部9个节点 赋予颜色变成原来的颜色  用来清除循环上次的颜色
         function back() {
             for (let i = 0; i < 9; i++) {
-                boxes[i].style.backgroundColor = 'orange'
+                boxes[i].style.backgroundColor = 'orange';
             }
         }
 
