--- a/jstask2/3.html
+++ b/jstask2/3.html
@@ -87,6 +87,9 @@
             } else if (a > 18) {
                 pop.style.display = 'block';
             }
+             else if (a>3 && a<19){
+                  window.location.href='4.html';
+             }
         }
 
         //捕捉input值检测
