--- a/jstask2/2.html
+++ b/jstask2/2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/1.css">
+    <link rel="stylesheet" href="css/2.css">
 </head>
 
 <body>
@@ -43,16 +43,8 @@
     </div>
 </div>
 </div>
-<script>
-     var open = document.getElementById('open');
-     open.onclick = function (){
-   
-        window.location.href='3.html'; 
-    
-}
 
-
-</script>
+<script type="text/javascript" src="js/2.js"></script>
 
 </body>
 
