--- a/jstask2/6.html
+++ b/jstask2/6.html
@@ -6,36 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/6.css">
+    <style>
+    </style>
 </head>
 <body>
     <header>
         <img src="img/Back.png" alt="">
-        <span>法官太笨</span>
+        <span>法官台本</span>
         <div></div>
     </header>
    <div class="list">
-       <span class="day">第一天</span>
-       <div class="matter">
-           <div class="dot"></div>
-           <div class="moon"></div>
-            <span class="button">杀手杀人</span>
-            <p>大嘎嘎</p>
-           <div class="sun"></div>
-           <span class="button">亡灵发表遗言</span>
-           <span class="button">玩家依次发言</span>
-           <span class="button">投票</span>
-           <p></p>
-       </div>
-      
        
-   </div>
+    </div>
+
+
+  
 
 
 
 
-
-
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 <script type="text/javascript" src="js/6.js"></script>
+
 
 </body>
 </html>
