--- a/jstask2/3.html
+++ b/jstask2/3.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="img/Back.png" alt="">
+        <img src="img/Back.png" id="back">
     </header>
     <p>玩家匹比</p>
     <div>
