--- a/jstask2/5.html
+++ b/jstask2/5.html
@@ -12,9 +12,9 @@
 <body>
         
     <header>
-        <img src="img/Back.png" alt="">
+        <img src="img/Back.png" id="back">
         <span>法官查看</span>
-        <div></div>
+        <div id="homepage" ></div>
     </header>
     
     <div class="overall">
