--- a/jstask2/6.html
+++ b/jstask2/6.html
@@ -11,16 +11,19 @@
 </head>
 <body>
     <header>
-        <img src="img/Back.png" alt="">
+        <img src="img/Back.png" id="back">
         <span>法官台本</span>
-        <div></div>
+        <div id="homepage" ></div>
     </header>
    <div class="list">
        
     </div>
 
 
-  
+    <footer>
+        <span id="end">结束游戏</span>
+        <span>法官查看</span>
+    </footer>
 
 
 
