--- a/jstask2/8.html
+++ b/jstask2/8.html
@@ -13,7 +13,8 @@
         <header>
                 <img src="img/Back.png" alt="">
                 <span>投票选举</span>
-                <div></div>
+        <div id="homepage" ></div>
+       
             </header>
             
             <div class="overall">
