--- a/jstask2/4.html
+++ b/jstask2/4.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <img src="img/Back.png" alt="">
+        <img src="img/Back.png" id="back">
         <span>查看身份</span>
-        <div></div>
+        <div id="homepage" ></div>
     </header>
     <div>
         <span id="number">1</span>
