--- a/jstask2/7.html
+++ b/jstask2/7.html
@@ -13,7 +13,8 @@
         <header>
                 <img src="img/Back.png" alt="">
                 <span>杀手杀人</span>
-                <div></div>
+        <div id="homepage" ></div>
+       
             </header>
             
             <div class="overall">
