--- a/test/1.html
+++ b/test/1.html
@@ -18,27 +18,27 @@
 
  <script>
  
- function changeAgeAndReference(person) {
-            person.age = 25;
-            person = {
-                name: 'John',
-                age: 50
-            };
-
-            return person;
-        }
-        var personObj1 = {
-            name: 'Alex',
-            age: 30
-        };
-        var personObj2 = changeAgeAndReference(personObj1);
-        console.log(personObj1); // -> ?
-        console.log(personObj2); // -> ?
-
-
-
-
-
+ let a = new Promise(  
+  function(resolve, reject) {  
+    console.log(1)  
+    setTimeout(() => console.log(2), 0)  
+    console.log(3)  
+    console.log(4)  
+    resolve(true)  
+  }  
+)  
+a.then(v => {  
+  console.log(8)  
+})  
+  
+let b = new Promise(  
+  function() {  
+    console.log(5)  
+    setTimeout(() => console.log(6), 0)  
+  }  
+)  
+  
+console.log(7) 
  </script>
 
  
