--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="task1415/2.html">14-2</a>
     <a href="task1415/3.html">14-3</a>
     <a href="jstask1/9box.html">闪动</a>
+    <a href="jstask2/1.html">狼人杀</a>
    
 </body>
 
