--- a/jstask2/3.html
+++ b/jstask2/3.html
@@ -44,16 +44,16 @@
 
 
     </div>
-    <button onclick="deal()">去发牌</button>
+    <button id="goto">去发牌</button>
     <div id="pop-up">
         <div>
             <span>请输入正确玩家数量</span>
-            <button onclick="cancel()">取消</button>
+            <button class="none">取消</button>
 
-            <button onclick="cancel()">确认</button>
+            <button class="none">确认</button>
         </div>
     </div>
-
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" src="js/3.js"></script>
 
 
