--- a/jstask2/4.html
+++ b/jstask2/4.html
@@ -19,7 +19,7 @@
         <span id="number">1</span>
         <img id="good" src="img/bkhjb.png" alt="">
         <img id="bad" src="img/bad.png" alt="">
-        <span id="id">平民</span>
+        <p id="id">平民</p>
         <img id="play" src="img/ass.png" alt="">
     </div>
     <button id="look">
@@ -28,10 +28,8 @@
     <button id="transmit">
         隐藏并传递给<span id="number1">2</span>号
     </button>
-
-
    
-
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 <script type="text/javascript" src="js/4.js"></script>
 </body>
 
