--- a/jstask2/6.html
+++ b/jstask2/6.html
@@ -15,7 +15,7 @@
         <span>法官台本</span>
         <div id="homepage" ></div>
     </header>
-   <div class="list">
+   <div id="list">
        
     </div>
 
