--- a/jstask2/1.html
+++ b/jstask2/1.html
@@ -16,7 +16,7 @@
 <body>
     <img src="img/aa.png" alt=""><br>
     <span>更多·更多·更好用</span>
-     
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" src="js/1.js"></script>
 </body>
 </html>
