--- a/jstask2/2.html
+++ b/jstask2/2.html
@@ -43,7 +43,7 @@
     </div>
 </div>
 </div>
-
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 <script type="text/javascript" src="js/2.js"></script>
 
 </body>
