--- a/jstask2/5.html
+++ b/jstask2/5.html
@@ -224,7 +224,7 @@
 
 
    
-
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
 <script type="text/javascript" src="js/5.js"></script>
 
 
