--- a/jstask2/7.html
+++ b/jstask2/7.html
@@ -229,7 +229,7 @@
 
 
 
-
+            <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" src="js/7.js"></script>
 </body>
 
