--- a/jstask2/9.html
+++ b/jstask2/9.html
@@ -35,6 +35,7 @@
         <span id="next">再来一局</span>
         <span>上传并分享</span>
     </footer>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script type="text/javascript" src="js/9.js"></script>
 </body>
 
