--- a/test/1.html
+++ b/test/1.html
@@ -18,27 +18,17 @@
 
  <script>
  
- let a = new Promise(  
-  function(resolve, reject) {  
-    console.log(1)  
-    setTimeout(() => console.log(2), 0)  
-    console.log(3)  
-    console.log(4)  
-    resolve(true)  
-  }  
-)  
-a.then(v => {  
-  console.log(8)  
-})  
-  
-let b = new Promise(  
-  function() {  
-    console.log(5)  
-    setTimeout(() => console.log(6), 0)  
-  }  
-)  
-  
-console.log(7) 
+ function f1() {
+   console.log('1');
+   console.log('2');
+ }
+
+ function f2() {
+   console.log('3')
+ }
+
+ f1(f2());
+ f1()
  </script>
 
  
