--- a/jstask6/index.html
+++ b/jstask6/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/register.css">
     <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/artical.css">
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-    <div ui-view></div> 
+    <div class="all" ui-view></div> 
     
 
 
@@ -22,7 +23,8 @@
     <script src="js/appcontroller.js"></script>
     <script src="js/list.js"></script>
     <script src="js/article.js"></script>
-    <!-- <script src="js/register.js"></script> -->
+    <script src="js/register.js"></script>
+    <script src="js/filter.js"></script>
 
 </body>
 </html>
