--- a/jstask6/register.html
+++ b/jstask6/register.html
@@ -1,13 +1,15 @@
 <main>
+    <form name="myform">
     <div class="box">
         <p>后台登陆</p>
         <div>
-            <input type="text" ng-model="user.name" placeholder="请输入账号">
+            <input type="text" name="name" ng-model="user.name" placeholder="请输入账号" required >
         </div>
         <div>
             <input type="password" ng-model="user.pwd" placeholder="请输入密码">
         </div>
-        <span id="no"></span>
-        <button>登陆</button>
+        <span id="no" ng-show="myform.name.$error.required && myform.name.$dirty">填啊你填啊</span>
+        <button ng-click="gohome()">登陆</button>
     </div>
+</form>
 </main> 
