--- a/test/luyou/1.html
+++ b/test/luyou/1.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+
     <div>
         <div>
-            <h1>Page 1 content goes here...</h1>
-            <button ng-click="aas()"></button>
+            <h1>哈喽北鼻  要抱抱   继续努力 要抱抱</h1>
         </div>
    </div>
-   <div ui-view=""></div> 
-</body>
-</html>
