--- a/jstask6/index.html
+++ b/jstask6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="routerApp">
+<html lang="en" ng-app="routerApp" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,13 +18,17 @@
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.js"></script>
     <script src="https://cdn.bootcss.com/angular.js/1.6.6/angular.js"></script>
-    <script src="https://cdn.bootcss.com/angular-ui-router/1.0.6/angular-ui-router.js"></script>
+     <script src="js/angular-ui-router.js"></script>
+    <script src="js/stateEvents.js"></script>
+    <script src="js/change.js"></script>
     <script src="js/app.js"> </script>
     <script src="js/appcontroller.js"></script>
     <script src="js/list.js"></script>
     <script src="js/article.js"></script>
     <script src="js/register.js"></script>
     <script src="js/filter.js"></script>
+    <script src="js/add.js"></script>
+
 
 </body>
 </html>
