--- a/jstask6/index.html
+++ b/jstask6/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="routerApp" >
+<html lang="en" ng-app="routerApp"  >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +9,31 @@
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/artical.css">
     <link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="js/plug-in/pagin/pagination.css">
+    <link href="favicon.ico" rel="shortcut icon">
 </head>
 <body>
-    <div class="all" ui-view></div> 
+    <div class="all" ui-view  ></div> 
     
 
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.js"></script>
     <script src="https://cdn.bootcss.com/angular.js/1.6.6/angular.js"></script>
-     <script src="js/angular-ui-router.js"></script>
-    <script src="js/stateEvents.js"></script>
+    <script src="js/plug-in/pagin/jquery.pagination.js"></script>
     <script src="js/change.js"></script>
-    <script src="js/app.js"> </script>
-    <script src="js/appcontroller.js"></script>
-    <script src="js/list.js"></script>
-    <script src="js/article.js"></script>
-    <script src="js/register.js"></script>
-    <script src="js/filter.js"></script>
-    <script src="js/add.js"></script>
+    <script src="js/commonality/commonality.js"></script>
+     <script src="js/plug-in/angular-ui-router.js"></script>
+    <script src="js/plug-in/stateEvents.js"></script>
+    <script src="js/service/ajaxRequest.js"></script>
+    <script src="js/service/ajaxurl.js"></script>
+    <script src="js/service/ui-router.js"> </script>
+    <script src="js/controller/list.js"></script>
+    <script src="js/controller/article.js"></script>
+    <script src="js/controller/register.js"></script>
+    <script src="js/fillter/filter.js"></script>
+    <script src="js/controller/add.js"></script>
+   
 
 
 </body>
